fix: check query param string before parsing to int
